// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPageHeader is rendered 1`] = `
<header
  aria-label="aria-label"
  class="ouiPageHeader ouiPageHeader--responsive ouiPageHeader--center testClass1 testClass2"
  data-test-subj="test subject string"
>
  Anything
</header>
`;

exports[`OuiPageHeader props alignItems bottom is rendered 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsive ouiPageHeader--bottom"
>
  <div
    class="ouiPageHeaderContent"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsFlexEnd ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiPageHeaderContent__top"
    >
      <div
        class="ouiFlexItem"
      >
        <h1
          class="ouiTitle ouiTitle--large"
        >
          Page title
        </h1>
      </div>
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <div
          class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--wrap ouiPageHeaderContent__rightSideItems"
        >
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`OuiPageHeader props alignItems center is rendered 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsive ouiPageHeader--center"
>
  <div
    class="ouiPageHeaderContent"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiPageHeaderContent__top"
    >
      <div
        class="ouiFlexItem"
      >
        <h1
          class="ouiTitle ouiTitle--large"
        >
          Page title
        </h1>
      </div>
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <div
          class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--wrap ouiPageHeaderContent__rightSideItems"
        >
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`OuiPageHeader props alignItems stretch is rendered 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsive ouiPageHeader--stretch"
>
  <div
    class="ouiPageHeaderContent"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiPageHeaderContent__top"
    >
      <div
        class="ouiFlexItem"
      >
        <h1
          class="ouiTitle ouiTitle--large"
        >
          Page title
        </h1>
      </div>
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <div
          class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--wrap ouiPageHeaderContent__rightSideItems"
        >
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`OuiPageHeader props alignItems top is rendered 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsive ouiPageHeader--top"
>
  <div
    class="ouiPageHeaderContent"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsFlexStart ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiPageHeaderContent__top"
    >
      <div
        class="ouiFlexItem"
      >
        <h1
          class="ouiTitle ouiTitle--large"
        >
          Page title
        </h1>
      </div>
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <div
          class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--wrap ouiPageHeaderContent__rightSideItems"
        >
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`OuiPageHeader props page content props are passed down is rendered 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsive ouiPageHeader--tabsAtBottom ouiPageHeader--center"
>
  <div
    class="ouiPageHeaderContent"
  >
    <div
      class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsFlexStart ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiPageHeaderContent__top"
    >
      <div
        class="ouiFlexItem"
      >
        <h1
          class="ouiTitle ouiTitle--large"
        >
          Page title
        </h1>
        <div
          class="ouiSpacer ouiSpacer--l"
        />
        <div
          class="ouiText ouiText--medium ouiText--constrainedWidth"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="ouiFlexItem ouiFlexItem--flexGrowZero"
      >
        <div
          aria-label="aria-label"
          class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiFlexGroup--wrap ouiPageHeaderContent__rightSideItems testClass1 testClass2"
          data-test-subj="test subject string"
        >
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="ouiFlexItem ouiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ouiPageHeaderContent__bottom"
    >
      <div
        class="ouiSpacer ouiSpacer--l"
      />
      <p>
        Anything
      </p>
      <div
        class="ouiSpacer ouiSpacer--l"
      />
      <div
        aria-label="aria-label"
        class="ouiTabs ouiTabs--condensed ouiTabs--large testClass1 testClass2"
        data-test-subj="test subject string"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="ouiTab ouiTab-isSelected"
          role="tab"
          type="button"
        >
          <span
            class="ouiTab__content"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-selected="false"
          class="ouiTab"
          role="tab"
          type="button"
        >
          <span
            class="ouiTab__content"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`OuiPageHeader props responsive is rendered as false 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--center"
/>
`;

exports[`OuiPageHeader props responsive is rendered as reverse 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsiveReverse ouiPageHeader--center"
/>
`;

exports[`OuiPageHeader props restrictWidth is rendered as custom 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsive ouiPage--restrictWidth-custom ouiPageHeader--center"
  style="max-width:100px"
/>
`;

exports[`OuiPageHeader props restrictWidth is rendered as true 1`] = `
<header
  class="ouiPageHeader ouiPageHeader--responsive ouiPage--restrictWidth-default ouiPageHeader--center"
/>
`;
